Ensure all top aligned toasts appear underneath the Header

--- a/src/pages/App/App.scss
+++ b/src/pages/App/App.scss
@@ -26,3 +26,8 @@ main,
 body {
   background: fixed var(--bg);
 }
+
+// offset the toasts area by about the height of the Header component
+.toast-portal ul {
+  margin-top: 7rem;
+}
